# Business-Software

./: db.sqlite3  pyproject.toml  requirements.txt
authentication/: serializers.py  urls.py  views.py
business_area/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
business_area/migrations/: 0001_initial.py  0002_remove_businessmodel_average_annual_budget_and_more.py
business_projections/: apps.py
business_software/: asgi.py  settings.py  urls.py  wsgi.py
expenses/: models.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_products_category_name.py  0003_rename_category_name_products_category_and_more.py
sales_record/: models.py
sales_record/migrations/: 0001_initial.py  0002_salesrecords_total_delete_totalamountsold.py
