[tool.poetry]
name = "business_software"
version = "0.1.0"
description = ""
authors = ["yhtiee <99039727+yhtiee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
dj-database-url = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
